# book-api

./: .gitlab-ci.yml  README.md
ci-cd/python/: Dockerfile
infrastructure/global/vpc/: ci-cd.yml  main.tf
services/book/: ci-cd.yml  pyproject.toml
services/book/api/: main.py
services/book/tests/integration/: test_main.py
